// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/admin_console/billing/plan_details should match snapshot when running FREE tier 1`] = `
<div>
  <div
    className="PlanDetails__feature"
    key="PlanDetails__feature0"
  >
    <i
      className="icon-check"
    />
    <span>
      10 GB storage per user
    </span>
  </div>
  <div
    className="PlanDetails__feature"
    key="PlanDetails__feature1"
  >
    <i
      className="icon-check"
    />
    <span>
      99.0% uptime
    </span>
  </div>
  <div
    className="PlanDetails__feature"
    key="PlanDetails__feature2"
  >
    <i
      className="icon-check"
    />
    <span>
      Self-Service documentation and forum support
    </span>
  </div>
  <div
    className="PlanDetails__feature"
    key="PlanDetails__feature3"
  >
    <i
      className="icon-check"
    />
    <span>
      Google, GitLab, O365 & MFA Authentication
    </span>
  </div>
  <div
    className="PlanDetails__feature"
    key="PlanDetails__feature4"
  >
    <i
      className="icon-check"
    />
    <span>
      Guest Accounts
    </span>
  </div>
  <div
    className="PlanDetails__feature"
    key="PlanDetails__feature5"
  >
    <i
      className="icon-check"
    />
    <span>
      Unlimited Integrations
    </span>
  </div>
</div>
`;

exports[`components/admin_console/billing/plan_details should match snapshot when running paid tier and enterprise 1`] = `
<div>
  <div
    className="PlanDetails__feature"
    key="PlanDetails__feature0"
  >
    <i
      className="icon-check"
    />
    <span>
      Enterprise administration & SSO
    </span>
  </div>
  <div
    className="PlanDetails__feature"
    key="PlanDetails__feature1"
  >
    <i
      className="icon-check"
    />
    <span>
      Automated compliance exports
    </span>
  </div>
  <div
    className="PlanDetails__feature"
    key="PlanDetails__feature2"
  >
    <i
      className="icon-check"
    />
    <span>
      Custom data retention policies
    </span>
  </div>
  <div
    className="PlanDetails__feature"
    key="PlanDetails__feature3"
  >
    <i
      className="icon-check"
    />
    <span>
      Shared channels (coming soon)
    </span>
  </div>
  <div
    className="PlanDetails__feature"
    key="PlanDetails__feature4"
  >
    <i
      className="icon-check"
    />
    <span>
      AD/LDAP group sync to teams & channels
    </span>
  </div>
  <div
    className="PlanDetails__feature"
    key="PlanDetails__feature5"
  >
    <i
      className="icon-check"
    />
    <span>
      Premium Support (optional upgrade)
    </span>
  </div>
</div>
`;

exports[`components/admin_console/billing/plan_details should match snapshot when running paid tier and professional 1`] = `
<div>
  <div
    className="PlanDetails__feature"
    key="PlanDetails__feature0"
  >
    <i
      className="icon-check"
    />
    <span>
      Advanced team permissions
    </span>
  </div>
  <div
    className="PlanDetails__feature"
    key="PlanDetails__feature1"
  >
    <i
      className="icon-check"
    />
    <span>
      MFA enforcement
    </span>
  </div>
  <div
    className="PlanDetails__feature"
    key="PlanDetails__feature2"
  >
    <i
      className="icon-check"
    />
    <span>
      GitLab, Google, and O365 single sign-on
    </span>
  </div>
  <div
    className="PlanDetails__feature"
    key="PlanDetails__feature3"
  >
    <i
      className="icon-check"
    />
    <span>
      Guest Accounts
    </span>
  </div>
  <div
    className="PlanDetails__feature"
    key="PlanDetails__feature4"
  >
    <i
      className="icon-check"
    />
    <span>
      Channel moderation
    </span>
  </div>
  <div
    className="PlanDetails__feature"
    key="PlanDetails__feature5"
  >
    <i
      className="icon-check"
    />
    <span>
      Read-only announcement channels
    </span>
  </div>
</div>
`;

exports[`components/admin_console/billing/plan_details should match snapshot when running paid tier and starter 1`] = `
<div>
  <div
    className="PlanDetails__feature"
    key="PlanDetails__feature0"
  >
    <i
      className="icon-check"
    />
    <span>
      Group and one-to-one messaging, file sharing, and search
    </span>
  </div>
  <div
    className="PlanDetails__feature"
    key="PlanDetails__feature1"
  >
    <i
      className="icon-check"
    />
    <span>
      Incident collaboration
    </span>
  </div>
  <div
    className="PlanDetails__feature"
    key="PlanDetails__feature2"
  >
    <i
      className="icon-check"
    />
    <span>
      Unlimited users & message history
    </span>
  </div>
  <div
    className="PlanDetails__feature"
    key="PlanDetails__feature3"
  >
    <i
      className="icon-check"
    />
    <span>
      Multi-Factor Authentication (MFA)
    </span>
  </div>
  <div
    className="PlanDetails__feature"
    key="PlanDetails__feature4"
  >
    <i
      className="icon-check"
    />
    <span>
      Multi-language translations
    </span>
  </div>
</div>
`;
